<resources>
    <!--MainActivity strings-->
    <string name="button_project">New Project</string>
    <string name="button_open">Load Project</string>
    <string name="app_name">GPSLogSheet2</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Project -->
    <string name="tab_name_1">Project</string>
    <string name="tab_name_2">Observations</string>
    <string name="tab_name_3">Maps</string>
    <string name="tab_name_4">Extras</string>
    <string name="nothing_to_load">No Projects in Database.</string>

    <string name="projectTextTemplate">Date created: %1$s \nDate modified: %2$s \nDate to end: %3$s \n</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Auto Synchronize Frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>1440</item>
        <item>10080</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Synchronize now</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="settings_points">Points</string>
    <string name="settings_rods">Rod Lengths</string>
    <string name="settings_antennas">Antennae</string>
    <string name="settings_projects">Projects</string>
    <string name="settings_images">Images</string>
    <string name="settings_alarms">Alarms</string>
    <string name="pref_header_credentials">Credentials</string>
    <string name="settings_instruments">Instruments</string>
    <string name="updateActivityTitle">Updating...</string>
    <string name="updateCancelButton">Cancel Update</string>
    <string name="edit_project_name">Name</string>
    <string name="project_settings_title">Project Settings:</string>
    <string name="operatorString">Operator</string>
    <string name="edit_switch">Editing</string>
    <string name="cancelString">Cancel</string>
    <string name="delete_project">Delete Project</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_query">Are you sure you want to delete the project?</string>
    <string name="invalid_name_query">Project name invalid, do you want to discard changes?</string>
    <string name="close_project_title">Close Project: Save or Discard changes?</string>
    <string name="settings_recipe">Batch file settings</string>
    <string name="set_end_date_button">Set End Date</string>

</resources>
