<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!-- TODO: Better text for "points" -->
    <PreferenceCategory android:title="What to synchronize">
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/settings_projects"
            android:key="switch_preference_projects" />
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/settings_points"
            android:key="switch_preference_points" />
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/settings_instruments"
            android:key="switch_preference_instruments" />
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/settings_bars"
            android:key="switch_preference_bars" />
        <SwitchPreference
            android:defaultValue="false"
            android:title="@string/settings_antennas"
            android:key="switch_preference_antennas" />
    </PreferenceCategory>
    <PreferenceCategory android:title="When to synchronize">

    </PreferenceCategory>
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />
    <Preference android:title="@string/pref_title_system_sync_settings" android:key = "syncNow">
        <!-- TODO: Make this trigger download latest settings from server -->
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
        <!--<intent android:action="dataSyncListener.onPreferenceClick(getPreference)"/>-->
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="ref.sdfe.gpslogsheet2"
            android:targetClass="ref.sdfe.gpslogsheet2.UpdateActivity"
            />
    </Preference>

</PreferenceScreen>
