<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ref.sdfe.gpslogsheet2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TODO: Design a proper main page."
        android:id="@+id/textView5" />

    <Button
        android:text="@string/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_button"
        android:onClick="openSettings"
        android:layout_below="@+id/project_button"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/project_button"
        android:onClick="newProject"
        android:layout_below="@+id/open_button"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/open_button"
        android:onClick="openProject"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/project_button" />
</RelativeLayout>
